demo/12.K8s.configmaps.secrets/app.yaml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: simple-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: php-apache
        image: eboraas/apache-php
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: test-config-mount
          mountPath: /tmp/test.txt
          subPath: test.txt
        - mountPath: "/data"
          name: task-pv-storage
        - name: persistent-storage
          mountPath: "/nfs_data"
        - name: persistent-storage-app
          mountPath: "/var/www/html"
      volumes:
      - name: test-config-mount
        configMap:
          name: test-config
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: app01-pv-claim
      - name: persistent-storage-app
        persistentVolumeClaim:
          claimName: app02-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
  labels:
    run: simple-web-service
spec:
  #type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: simple-web
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa
spec:
  ingressClassName: nginx
  rules:
    - host: app.k8s-15.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web-service
                port:
                  number: 80
